--- a/package.json
+++ b/package.json
@@ -8,12 +8,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@reduxjs/toolkit": "^1.7.1",
+    "baseui": "^10.6.0",
+    "deepmerge": "^4.2.2",
+    "graphql": "^16.1.0",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
+    "normalize.css": "^8.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2",
+    "redux-thunk": "^2.4.1",
+    "styletron-engine-atomic": "^1.4.8",
+    "styletron-react": "^6.0.2",
+    "styletron-utils": "^3.0.4"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
+    "@types/styletron-engine-atomic": "^1.1.1",
+    "@types/styletron-react": "^5.0.3",
+    "@types/styletron-standard": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-next": "12.0.7",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-baseui": "^10.6.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prop-types": "^15.7.2",
+    "typescript": "^4.5.4"
   }
 }
