--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-redux": "^7.1.20",
     "baseui": "^10.6.0",
     "deepmerge": "^4.2.2",
     "graphql": "^16.1.0",
     "lodash": "^4.17.21",
     "next": "12.0.7",
+    "next-auth": "^4.0.5",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "react-transition-group": "^4.4.2",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "styletron-engine-atomic": "^1.4.8",
     "styletron-react": "^6.0.2",
