--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@types/react-redux": "^7.1.20",
     "baseui": "^10.6.0",
+    "class-validator": "^0.13.2",
     "deepmerge": "^4.2.2",
     "graphql": "^16.1.0",
     "lodash": "^4.17.21",
@@ -24,11 +25,14 @@
     "react-transition-group": "^4.4.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "reflect-metadata": "^0.1.13",
     "styletron-engine-atomic": "^1.4.8",
     "styletron-react": "^6.0.2",
-    "styletron-utils": "^3.0.4"
+    "styletron-utils": "^3.0.4",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/styletron-engine-atomic": "^1.1.1",
