feat: add footer with links

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
         "redux/*"
       ],
       "@types/*": [
-        "redux/*"
+        "types/*"
       ],
       "@utils/*": [
         "utils/*"
