--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
+    "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "reflect-metadata": "^0.1.13",
+    "slick-carousel": "^1.8.1",
     "styletron-engine-atomic": "^1.4.8",
     "styletron-react": "^6.0.2",
     "styletron-utils": "^3.0.4",
